--- a/portofolio.html
+++ b/portofolio.html
@@ -13,71 +13,71 @@
     <header> 
         <a href="./index.html">WebStudio</a> 
          <nav> 
-          <ul> 
-            <li><a href="./index.html">Студія</a></li> 
-            <li><a href="./portofolio.html">Портфоліо</a></li> 
-            <li><a href=".#.html">Контакти</a></li> 
+          <ul class="portofolio-list"> 
+            <li class="portofolio-item"><a href="./index.html">Студія</a></li> 
+            <li class="portofolio-item"><a href="./portofolio.html">Портфоліо</a></li> 
+            <li class="portofolio-item"><a href=".#.html">Контакти</a></li> 
           </ul> 
          </nav> 
-         <ul> 
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
+         <ul class="items"> 
+          <li class="items-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
+          <li class="items-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
           <main>
-           <section>
-            <ul>
-              <li><button type="button">Усі</button></li>
-              <li><button type="button">Веб-сайти</button></li>
-              <li><button type="button">Додатки</button></li>
-              <li><button type="button">Дизайн</button></li>
-              <li><button type="button">Дизайн</button></li>
+           <section class="offers">
+            <ul class="offers-list">
+              <li class="offers-item"><button type="button" class="offers-button">Усі</button></li>
+              <li class="offers-item"><button type="button" class="offers-button">Веб-сайти</button></li>
+              <li class="offers-item"><button type="button" class="offers-button">Додатки</button></li>
+              <li class="offers-item"><button type="button" class="offers-button">Дизайн</button></li>
+              <li class="offers-item"><button type="button" class="offers-button">Дизайн</button></li>
             </ul>
            </section>
-           <section>
-            <ul>
-              <li>
+           <section class="frame">
+            <ul class="frame-list">
+              <li class="frame-item">
                 <img src="img2/technokryk.png" alt="technokryk">
-                <h2>Технокряк</h2>
+                <h2 class="frame-title">Технокряк</h2>
                 <p>Веб-сайт</p>
               </li>
-              <li>
+              <li class="frame-item">
                 <img src="img2/poster.png" alt="poster">
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <h2 class="frame-title">Постер New Orlean vs Golden Star</h2>
+                <p class="frame-text">Дизайн</p>
               </li>
-              <li>
+              <li class="frame-item">
                 <img src="img2/restourant.png" alt="restourant">
-                <h2>Ресторан Seafood</h2>
-                <p>Додаток</p>
+                <h2 class="frame-title">Ресторан Seafood</h2>
+                <p class="frame-text">Додаток</p>
               </li>
-              <li>
+              <li class="frame-item">
                 <img src="img2/projectprime.png" alt="projectprime">
-                <h2>Проєкт Prime</h2>
-                <p>Маркетинг</p>
+                <h2 class="frame-title">Проєкт Prime</h2>
+                <p class="frame-text">Маркетинг</p>
               </li>
-              <li>
+              <li class="frame-item">
                 <img src="img2/projectbox.png" alt="projectbox">
-                <h2>Проєкт Boxes</h2>
-                <p>Додаток</p>
+                <h2 class="frame-title">Проєкт Boxes</h2>
+                <p class="frame-text">Додаток</p>
               </li>
-              <li>
+              <li class="frame-item">
                 <img src="img2/inspiration.png" alt="inspiration">
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <h2 class="frame-title">Inspiration has no Borders</h2>
+                <p class="frame-text">Веб-сайт</p>
               </li>
-              <li>
+              <li class="frame-item">
                 <img src="img2/edition.png" alt="edition">
-                <h2>Видання Limited Edition</h2>
-                <p>Дизайн</p>
+                <h2 class="frame-title">Видання Limited Edition</h2>
+                <p class="frame-text">Дизайн</p>
               </li>
-              <li>
+              <li class="frame-item">
                 <img src="img2/projectlab.png" alt="projectlab">
-                <h2>Проєкт LAB</h2>
-                <p>Маркетинг</p>
+                <h2 class="frame-title">Проєкт LAB</h2>
+                <p class="frame-text">Маркетинг</p>
               </li>
-              <li>
+              <li class="frame-item">
                 <img src="img2/growing.png" alt="growing">
-                <h2>Growing Business</h2>
-                <p>Додаток</p>
+                <h2 class="frame-title">Growing Business</h2>
+                <p class="frame-text">Додаток</p>
               </li>
             </ul>
            </section>
