--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       </ul> 
      </nav> 
      <ul> 
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
+      <li><a href="mailto:info@devstudio.com" class="adres">info@devstudio.com</a></li> 
+      <li><a href="tel:+380961111111" class="number">+38 096 111 11 11</a></li> 
      </ul> 
   </header> 
   <main> 
-    <section class="beginning"> 
+    <section class="beginning" style="background-color: #2F303A;"> 
       <h1 class="beginning-title">Ефективні рішення для вашого бізнесу</h1> 
       <button type="button" class="beginning-button">Замовити послугу</button> 
     </section> 
@@ -60,33 +60,33 @@
         <li class="main-item"><img src="img/tablet.jpg" alt="tablet"></li> 
       </ul> 
      </section> 
-     <section class="team"> 
+     <section class="team" style="background-color:#F5F4FA;"> 
       <h2 class="team-title">НАША КОМАНДА</h2>
       <ul class="team-list">
         <li class="team-item">
-          <img src="img/igor.jpg" alt="Igor">
-          <h2 class="team-title">Ігор Дем'яненко</h2>
+          <img src="img/igor.jpg" alt="Igor" class="team-img">
+          <h2 class="team-titles">Ігор Дем'яненко</h2>
            <p class="team-text">Product Designer</p>
         </li>
         <li class="team-item">
-          <img src="img/olga.jpg" alt="Olga">
-           <h2 class="team-title">Ольга Рєпіна</h2> 
+          <img src="img/olga.jpg" alt="Olga" class="team-img">
+           <h2 class="team-titles">Ольга Рєпіна</h2> 
            <p class="team-text">Frontend Developer</p>
         </li>
         <li class="team-item">
-          <img src="img/mykola.jpg" alt="Mykola">
-           <h2 class="team-title">Микола Тарасов</h2>
+          <img src="img/mykola.jpg" alt="Mykola" class="team-img">
+           <h2 class="team-titles">Микола Тарасов</h2>
            <p class="team-text">Marketing</p>
         </li>
         <li class="team-item">
-           <img src="img/mykhailo.jpg" alt="Mykhailo">
-           <h2 class="team-title">Михайло Єрмаков</h2>
+           <img src="img/mykhailo.jpg" alt="Mykhailo" class="team-img">
+           <h2 class="team-titles">Михайло Єрмаков</h2>
            <p class="team-text">UI Designer</p>
         </li>
       </ul> 
      </section> 
     </main> 
-  <footer> 
+  <footer style="background-color: #2F303A;"> 
     <a href="./index.html" class="link">WebStudio</a> 
     <address> 
     <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu" target="_blank" class="link-lesia">м. Київ, пр-т Лесі Українки, 26</a> 
