--- a/portofolio.html
+++ b/portofolio.html
@@ -17,9 +17,9 @@
         <a href="./index.html" class="portofolio-link">WebStudio</a> 
          <nav> 
           <ul class="portofolio-list"> 
-            <li class="portofolio-item"><a href="./index.html">Студія</a></li> 
-            <li class="portofolio-item"><a href="./portofolio.html">Портфоліо</a></li> 
-            <li class="portofolio-item"><a href=".#.html">Контакти</a></li> 
+            <li ><a href="./index.html" class="portofolio-item">Студія</a></li> 
+            <li ><a href="./portofolio.html" class="portofolio-item">Портфоліо</a></li> 
+            <li ><a href=".#.html" class="portofolio-item">Контакти</a></li> 
           </ul> 
          </nav> 
          <ul class="items"> 
@@ -38,59 +38,59 @@
            <section class="frame">
             <ul class="frame-list">
               <li class="frame-item">
-                <img src="img2/technokryk.png" alt="technokryk">
+                <img src="img2/technokryk.png" alt="technokryk" class="frame-img">
                 <h2 class="frame-title">Технокряк</h2>
-                <p>Веб-сайт</p>
+                <p class="frame-text">Веб-сайт</p>
               </li>
               <li class="frame-item">
-                <img src="img2/poster.png" alt="poster">
+                <img src="img2/poster.png" alt="poster" class="frame-img">
                 <h2 class="frame-title">Постер New Orlean vs Golden Star</h2>
                 <p class="frame-text">Дизайн</p>
               </li>
               <li class="frame-item">
-                <img src="img2/restourant.png" alt="restourant">
+                <img src="img2/restourant.png" alt="restourant" class="frame-img">
                 <h2 class="frame-title">Ресторан Seafood</h2>
                 <p class="frame-text">Додаток</p>
               </li>
               <li class="frame-item">
-                <img src="img2/projectprime.png" alt="projectprime">
+                <img src="img2/projectprime.png" alt="projectprime" class="frame-img">
                 <h2 class="frame-title">Проєкт Prime</h2>
                 <p class="frame-text">Маркетинг</p>
               </li>
               <li class="frame-item">
-                <img src="img2/projectbox.png" alt="projectbox">
+                <img src="img2/projectbox.png" alt="projectbox" class="frame-img">
                 <h2 class="frame-title">Проєкт Boxes</h2>
                 <p class="frame-text">Додаток</p>
               </li>
               <li class="frame-item">
-                <img src="img2/inspiration.png" alt="inspiration">
+                <img src="img2/inspiration.png" alt="inspiration" class="frame-img">
                 <h2 class="frame-title">Inspiration has no Borders</h2>
                 <p class="frame-text">Веб-сайт</p>
               </li>
               <li class="frame-item">
-                <img src="img2/edition.png" alt="edition">
+                <img src="img2/edition.png" alt="edition" class="frame-img">
                 <h2 class="frame-title">Видання Limited Edition</h2>
                 <p class="frame-text">Дизайн</p>
               </li>
               <li class="frame-item">
-                <img src="img2/projectlab.png" alt="projectlab">
+                <img src="img2/projectlab.png" alt="projectlab" class="frame-img">
                 <h2 class="frame-title">Проєкт LAB</h2>
                 <p class="frame-text">Маркетинг</p>
               </li>
               <li class="frame-item">
-                <img src="img2/growing.png" alt="growing">
+                <img src="img2/growing.png" alt="growing" class="frame-img">
                 <h2 class="frame-title">Growing Business</h2>
                 <p class="frame-text">Додаток</p>
               </li>
             </ul>
            </section>
           </main>
-          <footer> 
+          <footer style="background-color: #2F303A;"> 
             <a href="./index.html" class="link">WebStudio</a> 
             <address> 
-            <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu" target="_blank" class="portofolio-adres">м. Київ, пр-т Лесі Українки, 26</a> 
+            <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu" target="_blank" class="link-lesia">м. Київ, пр-т Лесі Українки, 26</a> 
             <ul> 
-              <li><a href="mailto:info@devstudio.com" class="email">info@devstudio.com</a></li> 
+              <li><a href="mailto:info@devstudio.com" class="link-adres">info@devstudio.com</a></li> 
               <li><a href="tel:+380961111111" class="link-number">+38 096 111 11 11</a></li> 
             </ul> 
           </address> 
