--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head> 
 <body> 
   <header> 
-    <a href="./index.html" class="webstudio-link">WebStudio</a> 
-     <nav> 
+    <a href="./index.html" class="webstudio-link">Web<span class="header-span">Studio</span></a> 
+     <nav class="header-nav"> 
       <ul class="index-list"> 
-        <li class="index-item"><a href="./index.html" class="index-link">Студія</a></li> 
-        <li class="index-item"><a href="./portofolio.html" class="index-link">Портфоліо</a></li> 
-        <li class="index-item"><a href=".#" class="index-link">Контакти</a></li> 
+        <li class="index-list"><a href="./index.html" class="index-item">Студія</a></li> 
+        <li class="index-list"><a href="./portofolio.html" class="index-item">Портфоліо</a></li> 
+        <li class="index-list"><a href=".#" class="index-item">Контакти</a></li> 
       </ul> 
      </nav> 
      <ul> 
@@ -28,7 +28,7 @@
      </ul> 
   </header> 
   <main> 
-    <section class="beginning" style="background-color: #2F303A;"> 
+    <section class="beginning"> 
       <h1 class="beginning-title">Ефективні рішення для вашого бізнесу</h1> 
       <button type="button" class="beginning-button">Замовити послугу</button> 
     </section> 
@@ -60,7 +60,7 @@
         <li class="main-item"><img src="img/tablet.jpg" alt="tablet"></li> 
       </ul> 
      </section> 
-     <section class="team" style="background-color:#F5F4FA;"> 
+     <section class="team"> 
       <h2 class="team-title">НАША КОМАНДА</h2>
       <ul class="team-list">
         <li class="team-item">
@@ -86,8 +86,8 @@
       </ul> 
      </section> 
     </main> 
-  <footer style="background-color: #2F303A;"> 
-    <a href="./index.html" class="link">WebStudio</a> 
+  <footer class="footer"> 
+    <a href="./index.html" class="link">Web<span class="footer-link">Studio</span></a> 
     <address> 
     <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu" target="_blank" class="link-lesia">м. Київ, пр-т Лесі Українки, 26</a> 
     <ul> 
