--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <title>WebStudio</title> 
 </head> 
 <body> 
-  <header> 
+  <header class="header">
+    <div class="container">
     <a href="./index.html" class="webstudio-link">Web<span class="header-span">Studio</span></a> 
      <nav class="header-nav"> 
       <ul class="index-list"> 
@@ -25,14 +26,17 @@
      <ul> 
       <li><a href="mailto:info@devstudio.com" class="adres">info@devstudio.com</a></li> 
       <li><a href="tel:+380961111111" class="number">+38 096 111 11 11</a></li> 
-     </ul> 
+     </ul>
+    </div> 
   </header> 
   <main> 
     <section class="beginning"> 
+      <div class="container">
       <h1 class="beginning-title">Ефективні рішення для вашого бізнесу</h1> 
       <button type="button" class="beginning-button">Замовити послугу</button> 
     </section> 
     <section class="subject"> 
+      <div class="container">
       <ul class="subject-list"> 
         <li class="subject-item"> 
           <h2 class="subject-titel">УВАГА ДО ДЕТАЛЕЙ</h2> 
@@ -50,17 +54,21 @@
           <h2 class="subject-titel">СУЧАСНІ ТЕХНОЛОГІЇ</h2> 
           <p class="subject-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p> 
         </li> 
-      </ul> 
+      </ul>
+      </div> 
     </section> 
-     <section class="main"> 
+     <section class="main">
+      <div class="container"> 
       <h2 class="main-title">Чим ми займаємося</h2> 
       <ul> 
         <li class="main-item"><img src="img/comp.jpg" alt="comp"></li> 
         <li class="main-item"><img src="img/laptop.jpg" alt="laptop"></li> 
         <li class="main-item"><img src="img/tablet.jpg" alt="tablet"></li> 
       </ul> 
+    </div>
      </section> 
-     <section class="team"> 
+     <section class="team">
+      <div class="container">
       <h2 class="team-title">НАША КОМАНДА</h2>
       <ul class="team-list">
         <li class="team-item">
@@ -84,9 +92,11 @@
            <p class="team-text">UI Designer</p>
         </li>
       </ul> 
+    </div>
      </section> 
     </main> 
   <footer class="footer"> 
+    <div class="container">
     <a href="./index.html" class="footer-Web">Web<span class="footer-Studio">Studio</span></a> 
     <address> 
     <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu" target="_blank" class="link-lesia">м. Київ, пр-т Лесі Українки, 26</a> 
@@ -95,6 +105,7 @@
       <li><a href="tel:+380961111111" class="link-number">+38 096 111 11 11</a></li> 
     </ul> 
   </address> 
+</div>
   </footer> 
 </body> 
 </html>
