--- a/portofolio.html
+++ b/portofolio.html
@@ -13,7 +13,8 @@
     <title>Document</title>
 </head>
 <body>
-    <header> 
+    <header class="header">
+      <div class="container">
         <a href="./index.html" class="portofolio-link">Web<span class="link-portofolio">Studio</span></a> 
          <nav> 
           <ul class="portofolio-list"> 
@@ -24,9 +25,12 @@
          </nav> 
          <ul class="items"> 
           <li><a href="mailto:info@devstudio.com" class="items-item">info@devstudio.com</a></li> 
-          <li><a href="tel:+380961111111" class="items-item">+38 096 111 11 11</a></li> 
+          <li><a href="tel:+380961111111" class="items-item">+38 096 111 11 11</a></li>
+        </div>
+          </header> 
           <main>
            <section class="offers">
+            <div class="container">
             <ul class="offers-list">
               <li class="offers-item"><button type="button" class="offers-button">Усі</button></li>
               <li class="offers-item"><button type="button" class="offers-button">Веб-сайти</button></li>
@@ -34,8 +38,10 @@
               <li class="offers-item"><button type="button" class="offers-button">Дизайн</button></li>
               <li class="offers-item"><button type="button" class="offers-button">Дизайн</button></li>
             </ul>
+          </div>
            </section>
            <section class="frame">
+            <div class="container">
             <ul class="frame-list">
               <li class="frame-item">
                 <img src="img2/technokryk.png" alt="technokryk" class="frame-img">
@@ -83,9 +89,11 @@
                 <p class="frame-text">Додаток</p>
               </li>
             </ul>
+          </div>
            </section>
           </main>
           <footer class="footer"> 
+            <div class="container">
             <a href="./index.html" class="footer-Web">Web<span class="footer-Studio">Studio</span></a> 
             <address> 
             <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu" target="_blank" class="link-lesia">м. Київ, пр-т Лесі Українки, 26</a> 
@@ -93,7 +101,8 @@
               <li><a href="mailto:info@devstudio.com" class="link-adres">info@devstudio.com</a></li> 
               <li><a href="tel:+380961111111" class="link-number">+38 096 111 11 11</a></li> 
             </ul> 
-          </address> 
+          </address>
+        </div> 
           </footer> 
 </body>
 </html>
