--- a/portofolio.html
+++ b/portofolio.html
@@ -38,55 +38,51 @@
               <li class="offers-item"><button type="button" class="offers-button">Дизайн</button></li>
               <li class="offers-item"><button type="button" class="offers-button">Дизайн</button></li>
             </ul>
-          </div>
-           </section>
-           <section class="frame">
-            <div class="container">
-            <ul class="frame-list">
+             <ul class="frame-list">
               <li class="frame-item">
-                <img src="img2/technokryk.png" alt="technokryk" class="frame-img">
+                <img src="img2/technokryk.png" alt="technokryk" class="offers-img">
                 <h2 class="frame-title">Технокряк</h2>
-                <p class="frame-text">Веб-сайт</p>
+                <p class="offers-text">Веб-сайт</p>
               </li>
               <li class="frame-item">
-                <img src="img2/poster.png" alt="poster" class="frame-img">
-                <h2 class="frame-title">Постер New Orlean vs Golden Star</h2>
-                <p class="frame-text">Дизайн</p>
+                <img src="img2/poster.png" alt="poster" class="offers-img">
+                <h2 class="offers-title">Постер New Orlean vs Golden Star</h2>
+                <p class="offers-text">Дизайн</p>
               </li>
               <li class="frame-item">
-                <img src="img2/restourant.png" alt="restourant" class="frame-img">
-                <h2 class="frame-title">Ресторан Seafood</h2>
-                <p class="frame-text">Додаток</p>
+                <img src="img2/restourant.png" alt="restourant" class="offers-img">
+                <h2 class="offers-title">Ресторан Seafood</h2>
+                <p class="offers-text">Додаток</p>
               </li>
               <li class="frame-item">
-                <img src="img2/projectprime.png" alt="projectprime" class="frame-img">
-                <h2 class="frame-title">Проєкт Prime</h2>
-                <p class="frame-text">Маркетинг</p>
+                <img src="img2/projectprime.png" alt="projectprime" class="offers-img">
+                <h2 class="offers-title">Проєкт Prime</h2>
+                <p class="offers-text">Маркетинг</p>
               </li>
               <li class="frame-item">
-                <img src="img2/projectbox.png" alt="projectbox" class="frame-img">
-                <h2 class="frame-title">Проєкт Boxes</h2>
-                <p class="frame-text">Додаток</p>
+                <img src="img2/projectbox.png" alt="projectbox" class="offers-img">
+                <h2 class="offers-title">Проєкт Boxes</h2>
+                <p class="offers-text">Додаток</p>
               </li>
               <li class="frame-item">
-                <img src="img2/inspiration.png" alt="inspiration" class="frame-img">
-                <h2 class="frame-title">Inspiration has no Borders</h2>
-                <p class="frame-text">Веб-сайт</p>
+                <img src="img2/inspiration.png" alt="inspiration" class="offers-img">
+                <h2 class="offers-title">Inspiration has no Borders</h2>
+                <p class="offers-text">Веб-сайт</p>
               </li>
               <li class="frame-item">
-                <img src="img2/edition.png" alt="edition" class="frame-img">
-                <h2 class="frame-title">Видання Limited Edition</h2>
-                <p class="frame-text">Дизайн</p>
+                <img src="img2/edition.png" alt="edition" class="offers-img">
+                <h2 class="offers-title">Видання Limited Edition</h2>
+                <p class="offers-text">Дизайн</p>
               </li>
               <li class="frame-item">
-                <img src="img2/projectlab.png" alt="projectlab" class="frame-img">
-                <h2 class="frame-title">Проєкт LAB</h2>
-                <p class="frame-text">Маркетинг</p>
+                <img src="img2/projectlab.png" alt="projectlab" class="offers-img">
+                <h2 class="offers-title">Проєкт LAB</h2>
+                <p class="offers-text">Маркетинг</p>
               </li>
               <li class="frame-item">
-                <img src="img2/growing.png" alt="growing" class="frame-img">
-                <h2 class="frame-title">Growing Business</h2>
-                <p class="frame-text">Додаток</p>
+                <img src="img2/growing.png" alt="growing" class="offers-img">
+                <h2 class="offers-title">Growing Business</h2>
+                <p class="offers-text">Додаток</p>
               </li>
             </ul>
           </div>
