--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li class="index-list"><a href=".#" class="index-item">Контакти</a></li> 
       </ul> 
      </nav> 
-     <ul> 
+     <ul class="header-list"> 
       <li><a href="mailto:info@devstudio.com" class="adres">info@devstudio.com</a></li> 
       <li><a href="tel:+380961111111" class="number">+38 096 111 11 11</a></li> 
      </ul>
@@ -60,7 +60,7 @@
      <section class="main">
       <div class="container"> 
       <h2 class="main-title">Чим ми займаємося</h2> 
-      <ul> 
+      <ul class="main-img"> 
         <li class="main-item"><img src="img/comp.jpg" alt="comp"></li> 
         <li class="main-item"><img src="img/laptop.jpg" alt="laptop"></li> 
         <li class="main-item"><img src="img/tablet.jpg" alt="tablet"></li> 
