--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href= "link rel="preconnect href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="CSS/reset.css">
   <link rel="stylesheet" href="CSS/style.css">
@@ -73,23 +75,31 @@
       <ul class="team-list">
         <li class="team-item">
           <img src="img/igor.jpg" alt="Igor" class="team-img">
+          <div class="margin">
           <h2 class="team-titles">Ігор Дем'яненко</h2>
            <p class="team-text">Product Designer</p>
+          </div>
         </li>
         <li class="team-item">
           <img src="img/olga.jpg" alt="Olga" class="team-img">
+          <div class="margin">
            <h2 class="team-titles">Ольга Рєпіна</h2> 
            <p class="team-text">Frontend Developer</p>
+          </div>
         </li>
         <li class="team-item">
           <img src="img/mykola.jpg" alt="Mykola" class="team-img">
+          <div class="margin">
            <h2 class="team-titles">Микола Тарасов</h2>
            <p class="team-text">Marketing</p>
+          </div>
         </li>
         <li class="team-item">
            <img src="img/mykhailo.jpg" alt="Mykhailo" class="team-img">
+           <div class="margin">
            <h2 class="team-titles">Михайло Єрмаков</h2>
            <p class="team-text">UI Designer</p>
+          </div>
         </li>
       </ul> 
     </div>
