--- a/portofolio.html
+++ b/portofolio.html
@@ -41,8 +41,10 @@
              <ul class="frame-list">
               <li class="frame-item">
                 <img src="img2/technokryk.png" alt="technokryk" class="offers-img">
+                <div class="frame-box">
                 <h2 class="offers-title">Технокряк</h2>
                 <p class="offers-text">Веб-сайт</p>
+              </div>
               </li>
               <li class="frame-item">
                 <img src="img2/poster.png" alt="poster" class="offers-img">
