--- a/portofolio.html
+++ b/portofolio.html
@@ -48,43 +48,59 @@
               </li>
               <li class="frame-item">
                 <img src="img2/poster.png" alt="poster" class="offers-img">
+                  <div class="frame-box">
                 <h2 class="offers-title">Постер New Orlean vs Golden Star</h2>
                 <p class="offers-text">Дизайн</p>
+              </div>
               </li>
               <li class="frame-item">
                 <img src="img2/restourant.png" alt="restourant" class="offers-img">
+                <div class="frame-box">
                 <h2 class="offers-title">Ресторан Seafood</h2>
                 <p class="offers-text">Додаток</p>
+              </div>
               </li>
               <li class="frame-item">
                 <img src="img2/projectprime.png" alt="projectprime" class="offers-img">
+                <div class="frame-box">
                 <h2 class="offers-title">Проєкт Prime</h2>
                 <p class="offers-text">Маркетинг</p>
+              </div>
               </li>
               <li class="frame-item">
                 <img src="img2/projectbox.png" alt="projectbox" class="offers-img">
+                <div class="frame-box">
                 <h2 class="offers-title">Проєкт Boxes</h2>
                 <p class="offers-text">Додаток</p>
+              </div>
               </li>
               <li class="frame-item">
                 <img src="img2/inspiration.png" alt="inspiration" class="offers-img">
+                <div class="frame-box">
                 <h2 class="offers-title">Inspiration has no Borders</h2>
                 <p class="offers-text">Веб-сайт</p>
+              </div>
               </li>
               <li class="frame-item">
                 <img src="img2/edition.png" alt="edition" class="offers-img">
+                <div class="frame-box">
                 <h2 class="offers-title">Видання Limited Edition</h2>
                 <p class="offers-text">Дизайн</p>
+              </div>
               </li>
               <li class="frame-item">
                 <img src="img2/projectlab.png" alt="projectlab" class="offers-img">
+                <div class="frame-box">
                 <h2 class="offers-title">Проєкт LAB</h2>
                 <p class="offers-text">Маркетинг</p>
+              </div>
               </li>
               <li class="frame-item">
                 <img src="img2/growing.png" alt="growing" class="offers-img">
+                <div class="frame-box">
                 <h2 class="offers-title">Growing Business</h2>
                 <p class="offers-text">Додаток</p>
+              </div>
               </li>
             </ul>
           </div>
