--- a/portofolio.html
+++ b/portofolio.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="CSS/reset.css">
   <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="./CSS/normalize.css">
     <title>WebStudio</title>
 </head>
 <body>
@@ -36,7 +37,7 @@
               <li class="offers-item"><button type="button" class="offers-button">Веб-сайти</button></li>
               <li class="offers-item"><button type="button" class="offers-button">Додатки</button></li>
               <li class="offers-item"><button type="button" class="offers-button">Дизайн</button></li>
-              <li class="offers-item"><button type="button" class="offers-button">Дизайн</button></li>
+              <li class="offers-item"><button type="button" class="offers-button">Маркетинг</button></li>
             </ul>
              <ul class="frame-list">
               <li class="frame-item">
