--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
       </ul> 
      </nav> 
      <ul class="header-list"> 
-      <li><a href="mailto:info@devstudio.com" class="adres">info@devstudio.com</a></li> 
-      <li><a href="tel:+380961111111" class="number">+38 096 111 11 11</a></li> 
+      <li><a href="mailto:info@devstudio.com" class="adres">info@devstudio.com <svg class="adres-icon">
+        <use href="./img/symbol-defs.svg#icon-envelope">
+          
+        </use>
+      </svg>
+    </a></li> 
+      <li><a href="tel:+380961111111" class="number">+38 096 111 11 11 <svg class="adres-icon">
+        <use href="./img/symbol-defs.svg#icon-smartphone">
+
+        </use>
+      </svg></a></li> 
      </ul>
     </div> 
   </header> 
