--- a/portofolio.html
+++ b/portofolio.html
@@ -116,29 +116,36 @@
            </section>
           </main>
           <footer class="footer"> 
-            <div class="container">
+            <div class="container footer-box">
+              <div class="footer-block">
             <a href="./index.html" class="footer-Web">Web<span class="footer-Studio">Studio</span></a> 
             <address> 
             <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu" target="_blank" class="link-lesia">м. Київ, пр-т Лесі Українки, 26</a> 
             <ul class="footer-list"> 
               <li><a href="mailto:info@devstudio.com" class="link-adres">info@devstudio.com</a></li> 
-              <li><a href="tel:+380961111111" class="link-number">+38 096 111 11 11</a></li> 
+              <li><a href="tel:+380961111111" class="link-number">+38 096 111 11 11</a></li>
             </ul>
-            <p class="footer-pocition">приєднуйтесь</p>
-        <svg class="footer-svg">
-          <use href="./img/symbol-defs.svg#icon-instagram"></use>
-        </svg>
-        <svg class="footer-svg">
-          <use href="./img/symbol-defs.svg#icon-twitter"></use>
-        </svg>
-        <svg class="footer-svg">
-          <use href="./img/symbol-defs.svg#icon-facebook"></use>
-        </svg>
-        <svg class="footer-svg">
-          <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-        </svg> 
-          </address>
-        </div> 
+          </address> 
+          </div>
+          <div>
+            <h2 class="footer-h2">приєднуйтесь</h2>
+            <ul class="list-svg">
+              <li class="item-svg"><svg class="footer-svg">
+                  <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg></li>
+              <li class="item-svg"><svg class="footer-svg">
+                  <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                </svg></li>
+              <li class="item-svg"><svg class="footer-svg">
+                  <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg></li>
+              <li class="item-svg"><svg class="footer-svg">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg></li>
+            </ul>
+          </div>
+        
+        </div>
           </footer> 
-</body>
-</html>
+        </body> 
+        </html>
