--- a/portofolio.html
+++ b/portofolio.html
@@ -8,9 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="CSS/reset.css">
-  <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" href="./CSS/normalize.css">
+  <link rel="stylesheet" href="./style/main.min.css">
     <title>WebStudio</title>
 </head>
 <body>
@@ -19,9 +17,9 @@
         <a href="./index.html" class="webstudio-link">Web<span class="header-span">Studio</span></a> 
          <nav> 
           <ul class="index-list"> 
-            <li ><a href="./index.html" class="portofolio-item">Студія</a></li> 
-            <li ><a href="./portofolio.html" class="portofolio-item">Портфоліо</a></li> 
-            <li ><a href=".#.html" class="portofolio-item">Контакти</a></li> 
+            <li><a href="./index.html" class="index-item">Студія</a></li> 
+            <li ><a href="./portofolio.html" class="index-item">Портфоліо</a></li> 
+            <li ><a href=".#.html" class="index-item">Контакти</a></li> 
           </ul> 
          </nav> 
          <ul class="header-list"> 
@@ -144,7 +142,6 @@
                 </svg></li>
             </ul>
           </div>
-        
         </div>
           </footer> 
         </body> 
